[gd_scene load_steps=2 format=3 uid="uid://cpn5x0ijgl7ei"]

[ext_resource type="Script" uid="uid://drxv4egqcamtw" path="res://game/controllers/enemy_swamp_controller.gd" id="1_ol8cy"]

[node name="EnemySwampController" type="Node"]
script = ExtResource("1_ol8cy")

[node name="EnemyUpdateTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
autostart = true

[connection signal="timeout" from="EnemyUpdateTimer" to="." method="_on_enemy_update_timer_timeout"]
